force-app/main/default/objects/DC_Floor__c/fields/Floor_description__c.field-meta.xml
<CustomField>
    <fullName>Floor_description__c</fullName>
    <description>The full description of the floor as referenced by the operations team.</description>
    <label>Floor description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>