force-app/main/default/objects/DC_Floor__c/fields/Floor_number__c.field-meta.xml
<CustomField>
    <fullName>Floor_number__c</fullName>
    <description>The numerical level of the floor - decimal reserved for Mezzanine spaces.</description>
    <label>Floor_Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>