force-app/main/default/objects/DC_Floor__c/fields/Total_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Feet__c</fullName>
    <description>Total square footage of this floor</description>
    <label>Total Square Feet</label>
    <precision>7</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>