force-app/main/default/objects/DC_Floor__c/fields/X2D_Drawing__c.field-meta.xml
<CustomField>
    <fullName>X2D_Drawing__c</fullName>
    <label>2D Drawing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>